--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,37 @@ body {
   height: 100vh;
 }
 
+/* Error message */
+
+.error-message {
+  font-size: 4.8rem;
+  font-weight: 600;
+  margin-top: 20rem;
+  color: #ff6b6b;
+}
+
+/* choose country message */
+
+.choose-box {
+  font-size: 2.8rem;
+  margin-top: 20rem;
+}
+
+.choose-message {
+  margin: 1.2rem 0;
+}
+
+.choose-country {
+  color: #555;
+  border-bottom: 2px solid #555;
+  cursor: pointer;
+}
+
+.choose-country:hover {
+  color: #333;
+  border-bottom: 2px solid #333;
+}
+
 .header {
   width: 100%;
   padding: 4.8rem;
@@ -45,10 +76,12 @@ body {
 
 .country-image-box {
   max-width: 32rem;
+  height: 21.6rem;
 }
 
 .country-image {
   width: 100%;
+  height: 100%;
 }
 
 .country-name {
