--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,6 @@ body {
 }
 
 /* choose country message */
-
 .choose-box {
   font-size: 2.8rem;
   margin-top: 20rem;
@@ -45,6 +44,7 @@ body {
   border-bottom: 2px solid #333;
 }
 
+/* Styling header */
 .header {
   width: 100%;
   padding: 4.8rem;
@@ -54,6 +54,42 @@ body {
   font-size: 3.6rem;
   color: #555;
   font-weight: 700;
+}
+
+.form-country {
+  padding: 2.4rem 0;
+}
+
+.label {
+  display: block;
+  font-size: 1.8rem;
+  padding: 1.2rem 0;
+  color: #555;
+  font-weight: 700;
+}
+
+.input-country {
+  padding: 0.6rem;
+  font-family: inherit;
+}
+
+.btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+
+  background-color: #333;
+  color: #fff;
+  font-family: inherit;
+  padding: 0.6rem 1.2rem;
+  font-size: 1.6rem;
+  border-radius: 4px;
+  margin-left: 1.2rem;
+  transition: all 0.3s;
+}
+
+.btn:hover {
+  background-color: #222;
 }
 
 .container {
@@ -95,6 +131,7 @@ body {
 .country-detail {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  align-items: center;
   font-size: 1.6rem;
   padding: 1.2rem;
   color: #222;
